load("@flare_timing//:default-extensions.bzl", "DEFAULT_EXTENSIONS")

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "containers")
haskell_import(name = "vector")
haskell_import(name = "statistics")
haskell_import(name = "aeson")
haskell_import(name = "newtype")
haskell_import(name = "scientific")
haskell_import(name = "uom-plugin")
haskell_import(name = "template-haskell")

haskell_library(
    name = "flight-gap",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",
        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",
        "-fno-warn-partial-type-signatures",
        ] + DEFAULT_EXTENSIONS,
    deps = [
        ":base",
        ":containers",
        ":vector",
        ":statistics",
        ":aeson",
        ":newtype",
        ":scientific",
        ":template-haskell",
        ":uom-plugin",
        "//siggy-chardust:siggy-chardust",
        "//detour-via-sci:detour-via-sci",
        "//detour-via-uom:detour-via-uom",
        "//units:flight-units",
        ],
    visibility = ["//visibility:public"],
)
