load("@flare_timing//:default-extensions.bzl", "DEFAULT_EXTENSIONS")

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "split")
haskell_import(name = "parsec")
haskell_import(name = "hxt")
haskell_import(name = "path")
haskell_import(name = "hxt-xpath")
haskell_import(name = "aeson")
haskell_import(name = "time")

haskell_library(
    name = "flight-kml",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",
        "-Wall",
        ] + DEFAULT_EXTENSIONS,
    deps = [
        ":base",
        ":split",
        ":parsec",
        ":hxt",
        ":path",
        ":hxt-xpath",
        ":aeson",
        ":time",
        "//detour-via-sci:detour-via-sci",
        "//siggy-chardust:siggy-chardust",
        ],
    visibility = ["//visibility:public"],
)
