load("@flare_timing//:default-extensions.bzl", "DEFAULT_EXTENSIONS")

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "numbers")
haskell_import(name = "random")
haskell_import(name = "aeson")
haskell_import(name = "cassava")
haskell_import(name = "bytestring")
haskell_import(name = "bifunctors")
haskell_import(name = "uom-plugin")
haskell_import(name = "formatting")
haskell_import(name = "text")
haskell_import(name = "newtype")
haskell_import(name = "tasty-quickcheck")
haskell_import(name = "smallcheck")

haskell_library(
    name = "flight-latlng",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",
        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",
        ] + DEFAULT_EXTENSIONS,
    deps = [
        ":base",
        ":numbers",
        ":random",
        ":aeson",
        ":cassava",
        ":bytestring",
        ":bifunctors",
        ":uom-plugin",
        ":formatting",
        ":text",
        ":newtype",
        ":tasty-quickcheck",
        ":smallcheck",
        "//siggy-chardust:siggy-chardust",
        "//detour-via-sci:detour-via-sci",
        "//detour-via-uom:detour-via-uom",
        "//units:flight-units",
        ],
    visibility = ["//visibility:public"],
)
