load("@flare_timing//:default-extensions.bzl", "DEFAULT_EXTENSIONS")

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "aeson")
haskell_import(name = "bytestring")
haskell_import(name = "cassava")
haskell_import(name = "containers")
haskell_import(name = "directory")
haskell_import(name = "filemanip")
haskell_import(name = "filepath")
haskell_import(name = "lens")
haskell_import(name = "mtl")
haskell_import(name = "path")
haskell_import(name = "scientific")
haskell_import(name = "split")
haskell_import(name = "time")
haskell_import(name = "unordered-containers")
haskell_import(name = "uom-plugin")

haskell_library(
    name = "flight-lookup",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",
        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",
        ] + DEFAULT_EXTENSIONS,
    deps = [
        ":base",
        ":aeson",
        ":bytestring",
        ":cassava",
        ":containers",
        ":directory",
        ":filemanip",
        ":filepath",
        ":lens",
        ":mtl",
        ":path",
        ":scientific",
        ":split",
        ":time",
        ":unordered-containers",
        ":uom-plugin",
        "//clip:flight-clip",
        "//comp:flight-comp",
        "//gap:flight-gap",
        "//kml:flight-kml",
        "//latlng:flight-latlng",
        "//mask:flight-mask",
        "//route:flight-route",
        "//zone:flight-zone",
        "//detour-via-sci:detour-via-sci",
        ],
    visibility = ["//visibility:public"],
)
