load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "split")
haskell_import(name = "path")
haskell_import(name = "containers")
haskell_import(name = "mtl")
haskell_import(name = "directory")
haskell_import(name = "filepath")
haskell_import(name = "time")
haskell_import(name = "lens")
haskell_import(name = "bytestring")
haskell_import(name = "yaml")
haskell_import(name = "uom-plugin")
haskell_import(name = "fgl")
haskell_import(name = "cmdargs")
haskell_import(name = "numbers")

haskell_library(
    name = "flight-mask",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",

        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",

        "-XDataKinds",
        "-XDeriveFunctor",
        "-XDeriveGeneric",
        "-XDeriveAnyClass",
        "-XDerivingStrategies",
        "-XDisambiguateRecordFields",
        "-XFlexibleContexts",
        "-XFlexibleInstances",
        "-XGeneralizedNewtypeDeriving",
        "-XGADTs",
        "-XLambdaCase",
        "-XMultiParamTypeClasses",
        "-XMultiWayIf",
        "-XNamedFieldPuns",
        "-XOverloadedStrings",
        "-XPackageImports",
        "-XParallelListComp",
        "-XPartialTypeSignatures",
        "-XPatternSynonyms",
        "-XQuasiQuotes",
        "-XRankNTypes",
        "-XRecordWildCards",
        "-XScopedTypeVariables",
        "-XStandaloneDeriving",
        "-XTemplateHaskell",
        "-XTypeApplications",
        "-XTypeFamilies",
        "-XTypeOperators",
        "-XTypeSynonymInstances",
        "-XTupleSections",
        "-XUndecidableInstances",
        ],
    deps = [
        ":base",
        ":split",
        ":path",
        ":containers",
        ":mtl",
        ":directory",
        ":filepath",
        ":time",
        ":lens",
        ":bytestring",
        ":yaml",
        ":uom-plugin",
        ":fgl",
        ":cmdargs",
        ":numbers",
        "//detour-via-sci:detour-via-sci",
        "//span:flight-span",
        "//units:flight-units",
        "//comp:flight-comp",
        "//kml:flight-kml",
        "//latlng:flight-latlng",
        "//zone:flight-zone",
        "//route:flight-route",
        "//track:flight-track",
        "//earth:flight-earth",
        "//task:flight-task",
        "//gap:flight-gap",
        "//scribe:flight-scribe",
        "//siggy-chardust:siggy-chardust",
        ],
    visibility = ["//visibility:public"],
)
