load("@flare_timing//:default-extensions.bzl", "DEFAULT_EXTENSIONS")

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "bytestring")
haskell_import(name = "cmdargs")
haskell_import(name = "containers")
haskell_import(name = "directory")
haskell_import(name = "filepath")
haskell_import(name = "fgl")
haskell_import(name = "lens")
haskell_import(name = "mtl")
haskell_import(name = "numbers")
haskell_import(name = "path")
haskell_import(name = "safe-exceptions")
haskell_import(name = "split")
haskell_import(name = "these")
haskell_import(name = "time")
haskell_import(name = "uom-plugin")
haskell_import(name = "yaml")

haskell_library(
    name = "flight-mask",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",
        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",
        ] + DEFAULT_EXTENSIONS,
    deps = [
        ":base",
        ":bytestring",
        ":cmdargs",
        ":containers",
        ":directory",
        ":filepath",
        ":fgl",
        ":lens",
        ":mtl",
        ":numbers",
        ":path",
        ":safe-exceptions",
        ":split",
        ":these",
        ":time",
        ":uom-plugin",
        ":yaml",
        "//clip:flight-clip",
        "//comp:flight-comp",
        "//earth:flight-earth",
        "//gap:flight-gap",
        "//kml:flight-kml",
        "//latlng:flight-latlng",
        "//route:flight-route",
        "//scribe:flight-scribe",
        "//span:flight-span",
        "//task:flight-task",
        "//track:flight-track",
        "//units:flight-units",
        "//zone:flight-zone",
        "//detour-via-sci:detour-via-sci",
        "//siggy-chardust:siggy-chardust",
        ],
    visibility = ["//visibility:public"],
)
